[tool.numpydoc_validation]
checks = [
    "all",
]

[tool.black]
line-length = 79
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.pytest.ini_options]
markers = [
    "slow: marks tests that require significant execution time (deselect with '-m \"not slow\"')",
    "plot: marks tests related to matplotlib integration (deselect with '-m \"not plot\"')",
]
testpaths = [
    "tests",
]
addopts = "-m 'not slow' -n auto"

[project]
name = "garpar"
version = "1.0.0"
authors = [
    {name = "Diego N Gimenez Irusta", email = "d.gimenez0101@unc.edu.ar"},
    {name = "Nadia A Luczywo", email = "nadia.luczywo@unc.edu.ar"},
    {name = "Juan B Cabral", email = "jbcabral@unc.edu.ar"},
    {name = "Trinchi Chalela & QuatroPe", email = "quatrope@gmail.com"},
]
readme = "README.md"
license = {file = "LICENSE.txt"}
description = "Generation and Analysis of Real and Artificial Portfolio Returns"
keywords=[
    "market simulation",
    "informational efficiency",
    "portfolio optimization",
]
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering/Finances",
]
urls = { Homepage = "https://garpar.quatrope.org/", Repository = "https://github.com/quatrope/garpar" }
dependencies = [
    "build>=1.2.1",
    "colorlog>=4.8.0",
    "custom-inherit>=2.4.0",
    "Deprecated>=1.2.0",
    "deptree>=0.0.12",
    "docopt>=0.6.0",
    "ecos>=2.0.0",
    "flake8-docstrings>=1.7.0",
    "fqdn>=1.5.0",
    "GitPython>=3.1.0",
    "h5py>=3.11.0",
    "isoduration>=20.11.0",
    "jsonpointer>=3.0.0",
    "jupyter>=1.1.0",
    "methodtools>=0.4.0",
    "pipdeptree>=2.25.0",
    "plantuml>=0.3.0",
    "plotly>=5.24.0",
    "progress>=1.6",
    "PuLP>=2.8.0",
    "pyportfolioopt>=1.5.0",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.0",
    "shed>=2024.10.0",
    "tinycss2>=1.4.0",
    "uri-template>=1.3.0",
    "webcolors>=24.11.0",
    "yarg>=0.1.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["garpar", "garpar.*"]
namespaces = false
